# DX12ModernLab

./: .gitignore  CMakeLists.txt  COMPATIBILITY_PROFILE.md  LICENSE  README.md
Chapter 4 Direct3D Initialization/: CMakeLists.txt
Chapter 4 Direct3D Initialization/Init Direct3D/: CMakeLists.txt
Chapter 6 Drawing in Direct3D/: BoxApp.cpp  CMakeLists.txt
Chapter 6 Drawing in Direct3D/Box/: BoxApp.h  CMakeLists.txt
Chapter 6 Drawing in Direct3D/Box/Shaders/: color.hlsl
Chapter 7 Drawing in Direct3D Part II/: CMakeLists.txt
Chapter 7 Drawing in Direct3D Part II/Shapes/: CMakeLists.txt  FrameResource.cpp  FrameResource.h  ShapesApp.cpp  ShapesApp.h
Common/: CMakeLists.txt  D3DApp.cpp  D3DApp.h  DDSTextureLoader.cpp  GeometryGenerator.cpp  GeometryGenerator.h  MathHelper.cpp  MathHelper.h  UploadBuffer.h  d3dUtil.cpp  d3dUtil.h
Engine/: CMakeLists.txt  InitDirect3DApp.cpp  main.cpp
Engine/Runtime/: Application.cpp  Application.h  CMakeLists.txt  D3DApp.cpp  D3DApp.h
Engine/Runtime/Core/: DDSTextureLoader.h  GameTimer.cpp  d3dUtil.cpp  d3dUtil.h  d3dx12.h
